Syntax Analysis using FLEX and YACC (Bison)/y.output
Terminals unused in grammar

   CONST_FLOAT
   DO
   BREAK
   CONTINUE
   CHAR
   DOUBLE
   SWITCH
   CASE
   DEFAULT
   LOWER_THAN_ELSE


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_definition

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier ID LPAREN RPAREN compound_statement

    8 parameter_list: parameter_list COMMA type_specifier ID
    9               | parameter_list COMMA type_specifier
   10               | type_specifier ID
   11               | type_specifier

   12 compound_statement: LCURL statements RCURL
   13                   | LCURL RCURL

   14 var_declaration: type_specifier declaration_list SEMICOLON

   15 type_specifier: INT
   16               | FLOAT
   17               | VOID

   18 declaration_list: declaration_list COMMA ID
   19                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   20                 | ID
   21                 | ID LTHIRD CONST_INT RTHIRD

   22 statements: statement
   23           | statements statement

   24 statement: var_declaration
   25          | expression_statement
   26          | compound_statement
   27          | FOR LPAREN expression_statement expression_statement expression RPAREN
   28          | IF LPAREN expression RPAREN statement
   29          | IF LPAREN expression RPAREN statement ELSE statement
   30          | WHILE LPAREN expression RPAREN statement
   31          | PRINTLN LPAREN ID RPAREN SEMICOLON
   32          | RETURN expression SEMICOLON

   33 expression_statement: SEMICOLON
   34                     | expression SEMICOLON

   35 variable: ID
   36         | ID LTHIRD expression RTHIRD

   37 expression: logic_expression
   38           | variable ASSIGNOP logic_expression

   39 logic_expression: rel_expression
   40                 | rel_expression LOGICOP rel_expression

   41 rel_expression: simple_expression
   42               | simple_expression RELOP simple_expression

   43 simple_expression: term
   44                  | simple_expression ADDOP term

   45 term: unary_expression
   46     | term MULOP unary_expression

   47 unary_expression: ADDOP unary_expression
   48                 | NOT unary_expression
   49                 | factor

   50 factor: variable
   51       | ID LPAREN argument_list RPAREN
   52       | CONST_INT
   53       | variable INCOP
   54       | variable DECOP

   55 argument_list: arguments

   56 arguments: arguments COMMA logic_expression
   57          | logic_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 28 29
ELSE (259) 29
FOR (260) 27
ID (261) 6 7 8 10 18 19 20 21 31 35 36 51
LPAREN (262) 6 7 27 28 29 30 31 51
RPAREN (263) 6 7 27 28 29 30 31 51
COMMA (264) 8 9 18 19 56
LCURL (265) 12 13
RCURL (266) 12 13
SEMICOLON (267) 14 31 32 33 34
INT (268) 15
FLOAT (269) 16
VOID (270) 17
LTHIRD (271) 19 21 36
CONST_INT (272) 19 21 52
RTHIRD (273) 19 21 36
WHILE (274) 30
PRINTLN (275) 31
RETURN (276) 32
ASSIGNOP (277) 38
LOGICOP (278) 40
RELOP (279) 42
ADDOP (280) 44 47
MULOP (281) 46
NOT (282) 48
CONST_FLOAT (283)
INCOP (284) 53
DECOP (285) 54
DO (286)
BREAK (287)
CONTINUE (288)
CHAR (289)
DOUBLE (290)
SWITCH (291)
CASE (292)
DEFAULT (293)
LELSE (294)
LOWER_THAN_ELSE (295)


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
start (42)
    on left: 1, on right: 0
program (43)
    on left: 2 3, on right: 1 2
unit (44)
    on left: 4 5, on right: 2 3
func_definition (45)
    on left: 6 7, on right: 5
parameter_list (46)
    on left: 8 9 10 11, on right: 6 8 9
compound_statement (47)
    on left: 12 13, on right: 6 7 26
var_declaration (48)
    on left: 14, on right: 4 24
type_specifier (49)
    on left: 15 16 17, on right: 6 7 8 9 10 11 14
declaration_list (50)
    on left: 18 19 20 21, on right: 14 18 19
statements (51)
    on left: 22 23, on right: 12 23
statement (52)
    on left: 24 25 26 27 28 29 30 31 32, on right: 22 23 28 29 30
expression_statement (53)
    on left: 33 34, on right: 25 27
variable (54)
    on left: 35 36, on right: 38 50 53 54
expression (55)
    on left: 37 38, on right: 27 28 29 30 32 34 36
logic_expression (56)
    on left: 39 40, on right: 37 38 56 57
rel_expression (57)
    on left: 41 42, on right: 39 40
simple_expression (58)
    on left: 43 44, on right: 41 42 44
term (59)
    on left: 45 46, on right: 43 44 46
unary_expression (60)
    on left: 47 48 49, on right: 45 46 47 48
factor (61)
    on left: 50 51 52 53 54, on right: 49
argument_list (62)
    on left: 55, on right: 51
arguments (63)
    on left: 56 57, on right: 55 56


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start            go to state 4
    program          go to state 5
    unit             go to state 6
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 1

   15 type_specifier: INT .

    $default  reduce using rule 15 (type_specifier)


State 2

   16 type_specifier: FLOAT .

    $default  reduce using rule 16 (type_specifier)


State 3

   17 type_specifier: VOID .

    $default  reduce using rule 17 (type_specifier)


State 4

    0 $accept: start . $end

    $end  shift, and go to state 10


State 5

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit             go to state 11
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 6

    3 program: unit .

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_definition .

    $default  reduce using rule 5 (unit)


State 8

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


State 9

    6 func_definition: type_specifier . ID LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier . ID LPAREN RPAREN compound_statement
   14 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 12

    declaration_list  go to state 13


State 10

    0 $accept: start $end .

    $default  accept


State 11

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 12

    6 func_definition: type_specifier ID . LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier ID . LPAREN RPAREN compound_statement
   20 declaration_list: ID .
   21                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 14
    LTHIRD  shift, and go to state 15

    $default  reduce using rule 20 (declaration_list)


State 13

   14 var_declaration: type_specifier declaration_list . SEMICOLON
   18 declaration_list: declaration_list . COMMA ID
   19                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 16
    SEMICOLON  shift, and go to state 17


State 14

    6 func_definition: type_specifier ID LPAREN . parameter_list RPAREN compound_statement
    7                | type_specifier ID LPAREN . RPAREN compound_statement

    RPAREN  shift, and go to state 18
    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3

    parameter_list  go to state 19
    type_specifier  go to state 20


State 15

   21 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 21


State 16

   18 declaration_list: declaration_list COMMA . ID
   19                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 22


State 17

   14 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 14 (var_declaration)


State 18

    7 func_definition: type_specifier ID LPAREN RPAREN . compound_statement

    LCURL  shift, and go to state 23

    compound_statement  go to state 24


State 19

    6 func_definition: type_specifier ID LPAREN parameter_list . RPAREN compound_statement
    8 parameter_list: parameter_list . COMMA type_specifier ID
    9               | parameter_list . COMMA type_specifier

    RPAREN  shift, and go to state 25
    COMMA   shift, and go to state 26


State 20

   10 parameter_list: type_specifier . ID
   11               | type_specifier .

    ID  shift, and go to state 27

    $default  reduce using rule 11 (parameter_list)


State 21

   21 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 28


State 22

   18 declaration_list: declaration_list COMMA ID .
   19                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 29

    $default  reduce using rule 18 (declaration_list)


State 23

   12 compound_statement: LCURL . statements RCURL
   13                   | LCURL . RCURL

    IF         shift, and go to state 30
    FOR        shift, and go to state 31
    ID         shift, and go to state 32
    LCURL      shift, and go to state 23
    RCURL      shift, and go to state 33
    SEMICOLON  shift, and go to state 34
    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    VOID       shift, and go to state 3
    CONST_INT  shift, and go to state 35
    WHILE      shift, and go to state 36
    PRINTLN    shift, and go to state 37
    RETURN     shift, and go to state 38
    ADDOP      shift, and go to state 39
    NOT        shift, and go to state 40

    compound_statement    go to state 41
    var_declaration       go to state 42
    type_specifier        go to state 43
    statements            go to state 44
    statement             go to state 45
    expression_statement  go to state 46
    variable              go to state 47
    expression            go to state 48
    logic_expression      go to state 49
    rel_expression        go to state 50
    simple_expression     go to state 51
    term                  go to state 52
    unary_expression      go to state 53
    factor                go to state 54


State 24

    7 func_definition: type_specifier ID LPAREN RPAREN compound_statement .

    $default  reduce using rule 7 (func_definition)


State 25

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN . compound_statement

    LCURL  shift, and go to state 23

    compound_statement  go to state 55


State 26

    8 parameter_list: parameter_list COMMA . type_specifier ID
    9               | parameter_list COMMA . type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 56


State 27

   10 parameter_list: type_specifier ID .

    $default  reduce using rule 10 (parameter_list)


State 28

   21 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 21 (declaration_list)


State 29

   19 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 57


State 30

   28 statement: IF . LPAREN expression RPAREN statement
   29          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 58


State 31

   27 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN

    LPAREN  shift, and go to state 59


State 32

   35 variable: ID .
   36         | ID . LTHIRD expression RTHIRD
   51 factor: ID . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 60
    LTHIRD  shift, and go to state 61

    $default  reduce using rule 35 (variable)


State 33

   13 compound_statement: LCURL RCURL .

    $default  reduce using rule 13 (compound_statement)


State 34

   33 expression_statement: SEMICOLON .

    $default  reduce using rule 33 (expression_statement)


State 35

   52 factor: CONST_INT .

    $default  reduce using rule 52 (factor)


State 36

   30 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 62


State 37

   31 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 63


State 38

   32 statement: RETURN . expression SEMICOLON

    ID         shift, and go to state 32
    CONST_INT  shift, and go to state 35
    ADDOP      shift, and go to state 39
    NOT        shift, and go to state 40

    variable           go to state 47
    expression         go to state 64
    logic_expression   go to state 49
    rel_expression     go to state 50
    simple_expression  go to state 51
    term               go to state 52
    unary_expression   go to state 53
    factor             go to state 54


State 39

   47 unary_expression: ADDOP . unary_expression

    ID         shift, and go to state 32
    CONST_INT  shift, and go to state 35
    ADDOP      shift, and go to state 39
    NOT        shift, and go to state 40

    variable          go to state 65
    unary_expression  go to state 66
    factor            go to state 54


State 40

   48 unary_expression: NOT . unary_expression

    ID         shift, and go to state 32
    CONST_INT  shift, and go to state 35
    ADDOP      shift, and go to state 39
    NOT        shift, and go to state 40

    variable          go to state 65
    unary_expression  go to state 67
    factor            go to state 54


State 41

   26 statement: compound_statement .

    $default  reduce using rule 26 (statement)


State 42

   24 statement: var_declaration .

    $default  reduce using rule 24 (statement)


State 43

   14 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 68

    declaration_list  go to state 13


State 44

   12 compound_statement: LCURL statements . RCURL
   23 statements: statements . statement

    IF         shift, and go to state 30
    FOR        shift, and go to state 31
    ID         shift, and go to state 32
    LCURL      shift, and go to state 23
    RCURL      shift, and go to state 69
    SEMICOLON  shift, and go to state 34
    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    VOID       shift, and go to state 3
    CONST_INT  shift, and go to state 35
    WHILE      shift, and go to state 36
    PRINTLN    shift, and go to state 37
    RETURN     shift, and go to state 38
    ADDOP      shift, and go to state 39
    NOT        shift, and go to state 40

    compound_statement    go to state 41
    var_declaration       go to state 42
    type_specifier        go to state 43
    statement             go to state 70
    expression_statement  go to state 46
    variable              go to state 47
    expression            go to state 48
    logic_expression      go to state 49
    rel_expression        go to state 50
    simple_expression     go to state 51
    term                  go to state 52
    unary_expression      go to state 53
    factor                go to state 54


State 45

   22 statements: statement .

    $default  reduce using rule 22 (statements)


State 46

   25 statement: expression_statement .

    $default  reduce using rule 25 (statement)


State 47

   38 expression: variable . ASSIGNOP logic_expression
   50 factor: variable .
   53       | variable . INCOP
   54       | variable . DECOP

    ASSIGNOP  shift, and go to state 71
    INCOP     shift, and go to state 72
    DECOP     shift, and go to state 73

    $default  reduce using rule 50 (factor)


State 48

   34 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 74


State 49

   37 expression: logic_expression .

    $default  reduce using rule 37 (expression)


State 50

   39 logic_expression: rel_expression .
   40                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 75

    $default  reduce using rule 39 (logic_expression)


State 51

   41 rel_expression: simple_expression .
   42               | simple_expression . RELOP simple_expression
   44 simple_expression: simple_expression . ADDOP term

    RELOP  shift, and go to state 76
    ADDOP  shift, and go to state 77

    $default  reduce using rule 41 (rel_expression)


State 52

   43 simple_expression: term .
   46 term: term . MULOP unary_expression

    MULOP  shift, and go to state 78

    $default  reduce using rule 43 (simple_expression)


State 53

   45 term: unary_expression .

    $default  reduce using rule 45 (term)


State 54

   49 unary_expression: factor .

    $default  reduce using rule 49 (unary_expression)


State 55

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement .

    $default  reduce using rule 6 (func_definition)


State 56

    8 parameter_list: parameter_list COMMA type_specifier . ID
    9               | parameter_list COMMA type_specifier .

    ID  shift, and go to state 79

    $default  reduce using rule 9 (parameter_list)


State 57

   19 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 80


State 58

   28 statement: IF LPAREN . expression RPAREN statement
   29          | IF LPAREN . expression RPAREN statement ELSE statement

